Fixed screen height issue on mobile

--- a/styles/base.css
+++ b/styles/base.css
@@ -115,7 +115,7 @@
 
 html,
 body {
-	@apply bg-base text-body;
+	@apply bg-base text-body min-h-screen;
 }
 
 h1,
